add : event validation using joi package
